8299858: [Metrics] Swap memory limit reported incorrectly when too large